# cryptopy

./: app.py  pyproject.toml
components/: market_analysis.py  predictions.py  statistics.py
utils/: analysis.py  data_fetcher.py
